objects/Handwrytten__hndwrtObjNote__c.object
<CustomObject>
    <description>Handwrytten Note object.</description>
    <fields>
        <fullName>Handwrytten__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Handwrytten Notes</relationshipLabel>
        <relationshipName>Handwrytten_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Address_Type__c</fullName>
        <label>Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Handwrytten__Automated_Note_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Billing Address</fullName>
                </value>
                <value>
                    <fullName>Shipping Address</fullName>
                </value>
                <value>
                    <fullName>First Contact Mailing Address</fullName>
                </value>
                <value>
                    <fullName>First Contact Other Address</fullName>
                </value>
                <value>
                    <fullName>Contact Mailing Address</fullName>
                </value>
                <value>
                    <fullName>Contact Other Address</fullName>
                </value>
                <value>
                    <fullName>Account Billing Address</fullName>
                </value>
                <value>
                    <fullName>Account Shipping Address</fullName>
                </value>
                <value>
                    <fullName>Lead Address</fullName>
                </value>
                <value>
                    <fullName>Primary Contact Mailing Address</fullName>
                </value>
                <value>
                    <fullName>Primary Contact Other Address</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Handwrytten__Automated_Note_Name__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Use this unique name when building a process for automated notes.</inlineHelpText>
        <label>Automated Note Name</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Handwrytten__Automated_Note_Type__c</fullName>
        <label>Automated Note Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                    <default>true</default>
                    <label>Account</label>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Handwrytten__Automated_Template_Name__c</fullName>
        <label>Automated Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Automated_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automated Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Automated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Card_Category__c</fullName>
        <description>Card Category text</description>
        <label>Card Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Card_Cover__c</fullName>
        <formula>IMAGE(Handwrytten__Card_URL__c, &apos;No Cover Image Available&apos;, 400, 400 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Card Cover</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Card_Description__c</fullName>
        <label>Card Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Card_Name__c</fullName>
        <description>Card Name text</description>
        <label>Card Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Card_Orientation__c</fullName>
        <label>Card Orientation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Card_Price__c</fullName>
        <label>Card Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Card_URL__c</fullName>
        <description>Handwrytten Card Cover URL</description>
        <label>Card URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Handwrytten object: Lookup to Contact object.</description>
        <inlineHelpText>Contact to send Handwrytten Account to</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Handwrytten Notes</relationshipLabel>
        <relationshipName>Handwrytten_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Font_URL__c</fullName>
        <label>Font URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Gift_Card_Amount__c</fullName>
        <label>Gift Card Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Gift_Card__c</fullName>
        <description>Gift card name text</description>
        <label>Gift Card</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Handwrytten_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Handwrytten Account</label>
        <referenceTo>Handwrytten__hndwrtObjAccount__c</referenceTo>
        <relationshipLabel>Handwrytten Notes</relationshipLabel>
        <relationshipName>Handwrytten_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Handwrytten_Settings__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Handwrytten Settings</label>
        <referenceTo>Handwrytten__hndwrtObjSettings__c</referenceTo>
        <relationshipLabel>Handwrytten Notes</relationshipLabel>
        <relationshipName>Handwrytten_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Handwrytting_Style__c</fullName>
        <label>Handwrytting Style</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Insert_Name__c</fullName>
        <label>Insert Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Insert_Price__c</fullName>
        <label>Insert Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Handwrytten__International_Charge__c</fullName>
        <formula>IF (
 AND (
  NOT( ISBLANK(Handwrytten__Recipient_Country__c)),
  UPPER(Handwrytten__Recipient_Country__c) != &apos;UNITED STATES&apos;,
  UPPER(Handwrytten__Recipient_Country__c) != &apos;USA&apos;,
  UPPER(Handwrytten__Recipient_Country__c) != &apos;UNITED STATES OF AMERICA&apos;,
  UPPER(Handwrytten__Recipient_Country__c) != &apos;U.S.A.&apos;,
  UPPER(Handwrytten__Recipient_Country__c) != &apos;U.S.A&apos;
 ), 1.0, 0.0
)</formula>
        <label>International Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Handwrytten Notes</relationshipLabel>
        <relationshipName>Handwrytten_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Message__c</fullName>
        <label>Message</label>
        <length>760</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Handwrytten Notes</relationshipLabel>
        <relationshipName>Handwrytten_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Postage__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Postage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Recipient_Address_Line_2__c</fullName>
        <label>Recipient Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Recipient_Address__c</fullName>
        <label>Recipient Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Recipient_Business_Name__c</fullName>
        <label>Recipient Business Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Recipient_City__c</fullName>
        <label>Recipient City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Recipient_Country__c</fullName>
        <label>Recipient Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Recipient_Name__c</fullName>
        <label>Recipient Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Recipient_State__c</fullName>
        <label>Recipient State or Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Recipient_Zip__c</fullName>
        <label>Recipient Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Sender_Address_Line_2__c</fullName>
        <label>Sender Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Sender_Address__c</fullName>
        <label>Sender Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Sender_Business_Name__c</fullName>
        <label>Sender Business Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Sender_City__c</fullName>
        <label>Sender City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Sender_Country__c</fullName>
        <label>Sender Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Sender_Name__c</fullName>
        <label>Sender Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Sender_State__c</fullName>
        <label>Sender State or Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Sender_Zip__c</fullName>
        <label>Sender Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Status_Date__c</fullName>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Status_Message__c</fullName>
        <label>Status Message</label>
        <length>760</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Status_Month__c</fullName>
        <formula>MONTH( Handwrytten__Status_Date__c )</formula>
        <label>Status Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Status_Year__c</fullName>
        <formula>YEAR( Handwrytten__Status_Date__c )</formula>
        <label>Status Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Status__c</fullName>
        <description>Handwrytten note order status. Valid values include: New, In-Progress, and Completed. New - no validation rules apply. In-Progress - Handwrytten order is In-Progress, some validation rules apply. Completed - Handwrytten order is completed, all validation rules apply.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Handwrytten__Style__c</fullName>
        <formula>IF( NOT(ISNULL(Handwrytten__Font_URL__c)), 
    IMAGE(Handwrytten__Font_URL__c, &apos;No Cover Image Available&apos;, 300, 600),
     BLANKVALUE(Handwrytten__Handwrytting_Style__c, Handwrytten__font__c)
)</formula>
        <label>Handwrytting Style</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Total__c</fullName>
        <formula>Handwrytten__Card_Price__c + Handwrytten__Gift_Card_Amount__c +  Handwrytten__International_Charge__c +  Handwrytten__Insert_Price__c +  Handwrytten__Postage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Handwrytten__address_id__c</fullName>
        <description>Handwrytten address id field - &quot;address id&quot; is required for a Handwrytten order.</description>
        <label>address_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__card_id__c</fullName>
        <description>Handwrytten account card id. &quot;card id&quot; is required for a Handwrytten order.</description>
        <label>card_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__category_id__c</fullName>
        <description>Handwrytten card category id.</description>
        <label>category id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__credit_card_id__c</fullName>
        <label>credit_card_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__denomination_id__c</fullName>
        <label>denomination_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__font__c</fullName>
        <description>Handwrytten font, the font is required for a Handwrytten order</description>
        <label>font</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__gift_card_id__c</fullName>
        <label>gift card id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__insert_id__c</fullName>
        <label>insert id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__invoiced__c</fullName>
        <label>invoiced</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__order_id__c</fullName>
        <label>order_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Handwrytten Note</label>
    <listViews>
        <fullName>Handwrytten__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Hndwrt-{00000000}</displayFormat>
        <label>Handwrytten Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Handwrytten Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Handwrytten__Recipient_Address_fields_required</fullName>
        <active>true</active>
        <description>Recipient Address is required</description>
        <errorConditionFormula>AND ( 
  NOT(Handwrytten__Automated_Template__c),
  OR (
    ISBLANK( Handwrytten__Recipient_Address__c ), 
    ISBLANK( Handwrytten__Recipient_City__c ),  
    ISBLANK( Handwrytten__Recipient_Country__c ),
    ISBLANK( Handwrytten__Recipient_State__c ),    
    ISBLANK( Handwrytten__Recipient_Zip__c )
  )
)</errorConditionFormula>
        <errorMessage>Recipient Address is required to complete order. Please complete Recipient Address, City, State or Province, Postal Code, and Country.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Handwrytten__Recipient_Address_required</fullName>
        <active>false</active>
        <description>Recipient Address is required</description>
        <errorConditionFormula>AND ( ISBLANK( Handwrytten__Recipient_Address__c ),  NOT(Handwrytten__Automated_Template__c)
)</errorConditionFormula>
        <errorMessage>Recipient Address is required to complete order. Please complete Recipient Address.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Handwrytten__Recipient_City_is_required</fullName>
        <active>false</active>
        <description>Recipient City is required</description>
        <errorConditionFormula>AND (
ISBLANK( Handwrytten__Recipient_City__c ),
NOT(Handwrytten__Automated_Template__c)
)</errorConditionFormula>
        <errorMessage>Recipient City is required to complete order. Please complete Recipient City.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Handwrytten__Recipient_Country_is_required</fullName>
        <active>false</active>
        <description>Recipient Country is required</description>
        <errorConditionFormula>AND (
ISBLANK( Handwrytten__Recipient_Country__c ),
NOT(Handwrytten__Automated_Template__c)
)</errorConditionFormula>
        <errorMessage>Recipient Country is required. Please complete Recipient Country.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Handwrytten__Recipient_Name_is_required</fullName>
        <active>true</active>
        <description>Recipient Name is required</description>
        <errorConditionFormula>AND (
ISBLANK( Handwrytten__Recipient_Name__c ),
NOT(Handwrytten__Automated_Template__c)
)</errorConditionFormula>
        <errorMessage>Recipient Name is required to complete order. Please complete Recipient Name.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Handwrytten__Recipient_State_is_required</fullName>
        <active>false</active>
        <description>Recipient State is required</description>
        <errorConditionFormula>AND (ISBLANK( Handwrytten__Recipient_State__c ),
NOT(Handwrytten__Automated_Template__c)
)</errorConditionFormula>
        <errorMessage>Recipient State or Province is required to complete order. Please complete Recipient State or Province.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Handwrytten__Recipient_Zip_is_required</fullName>
        <active>false</active>
        <description>Recipient Zip is required</description>
        <errorConditionFormula>AND (
ISBLANK( Handwrytten__Recipient_Zip__c ),
NOT(Handwrytten__Automated_Template__c)
)</errorConditionFormula>
        <errorMessage>Recipient Postal Code is required. Please complete Recipient Postal Code.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Handwrytten__Sender_Address_required</fullName>
        <active>true</active>
        <description>Sender address is required</description>
        <errorConditionFormula>ISBLANK( Handwrytten__Sender_Address__c )</errorConditionFormula>
        <errorMessage>Sender Address is required to complete order. Please complete Sender Address.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Handwrytten__Sender_City_required</fullName>
        <active>true</active>
        <description>Sender City is required</description>
        <errorConditionFormula>ISBLANK( Handwrytten__Sender_City__c )</errorConditionFormula>
        <errorMessage>Sender City is required to complete order. Please complete Sender City.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Handwrytten__Sender_Country_required</fullName>
        <active>true</active>
        <description>Sender Country is required</description>
        <errorConditionFormula>ISBLANK( Handwrytten__Sender_Country__c )</errorConditionFormula>
        <errorMessage>Sender Country is required. Please complete Sender Country.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Handwrytten__Sender_Name_required</fullName>
        <active>true</active>
        <description>Sender Name is required</description>
        <errorConditionFormula>ISBLANK( Handwrytten__Sender_Name__c )</errorConditionFormula>
        <errorMessage>Sender Name is required to complete order. Please complete Sender Name.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Handwrytten__Sender_State_is_required</fullName>
        <active>true</active>
        <description>Sender state is required</description>
        <errorConditionFormula>ISBLANK( Handwrytten__Sender_State__c )</errorConditionFormula>
        <errorMessage>Sender State or Province is required. Please complete Sender State or Province.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Handwrytten__Sender_Zip_required</fullName>
        <active>true</active>
        <description>Sender Zip Code is required</description>
        <errorConditionFormula>ISBLANK( Handwrytten__Sender_Zip__c )</errorConditionFormula>
        <errorMessage>Sender Zip Code is required to complete order. Please complete Sender Zip Code.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Handwrytten__VR_Automated_Address_Type_req</fullName>
        <active>true</active>
        <description>Address Type is required.</description>
        <errorConditionFormula>AND ( Handwrytten__Automated_Template__c,
 ISBLANK(TEXT(Handwrytten__Address_Type__c))
)</errorConditionFormula>
        <errorDisplayField>Handwrytten__Address_Type__c</errorDisplayField>
        <errorMessage>Address Type is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Handwrytten__VR_Automated_Note_Name_Req</fullName>
        <active>true</active>
        <description>Automated Note Name is required</description>
        <errorConditionFormula>AND ( Handwrytten__Automated_Template__c,
ISBLANK(Handwrytten__Automated_Note_Name__c) 
)</errorConditionFormula>
        <errorDisplayField>Handwrytten__Automated_Note_Name__c</errorDisplayField>
        <errorMessage>Automated Note Name is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Handwrytten__VR_Automated_Note_Type_req</fullName>
        <active>true</active>
        <description>Automated Note Type is required.</description>
        <errorConditionFormula>AND ( Handwrytten__Automated_Template__c,
 ISBLANK(TEXT(Handwrytten__Automated_Note_Type__c))
)</errorConditionFormula>
        <errorDisplayField>Handwrytten__Automated_Note_Type__c</errorDisplayField>
        <errorMessage>Automated Note Type is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Handwrytten__VR_Card_Required</fullName>
        <active>true</active>
        <description>Users must select a Handwrytten Card to complete order</description>
        <errorConditionFormula>AND (
 OR (
 ISPICKVAL( Handwrytten__Status__c , &apos;Completed&apos;),
 ISPICKVAL( Handwrytten__Status__c , &apos;In-Progress&apos;)
 ),
 ISBLANK( Handwrytten__card_id__c )
)</errorConditionFormula>
        <errorMessage>Handwrytten Card is required to complete order. Please select a card.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Handwrytten__VR_Credit_Card_Required</fullName>
        <active>true</active>
        <description>Credit card is required to complete order.</description>
        <errorConditionFormula>AND ( 
ISPICKVAL( Handwrytten__Status__c , &apos;Completed&apos;), 
ISBLANK( Handwrytten__credit_card_id__c ),
BLANKVALUE( Handwrytten__invoiced__c, &apos;0&apos;) = &apos;0&apos;  
)</errorConditionFormula>
        <errorMessage>Credit Card is required to complete order. Please select a credit card.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Handwrytten__VR_Denomination_Required</fullName>
        <active>true</active>
        <description>Denomination/Gift card Amount is required when selecting a gift card.</description>
        <errorConditionFormula>AND (
 OR (
 ISPICKVAL( Handwrytten__Status__c , &apos;Completed&apos;),
 ISPICKVAL( Handwrytten__Status__c , &apos;In-Progress&apos;)
 ),
 NOT (ISBLANK(Handwrytten__gift_card_id__c) ),
 Handwrytten__gift_card_id__c &lt;&gt; &apos;000&apos;,
 ISBLANK( Handwrytten__denomination_id__c )
)</errorConditionFormula>
        <errorMessage>Gift Card Amount is required when a gift card is selected. Please select the appropriate gift card amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Handwrytten__VR_Handwrytten_Account_required</fullName>
        <active>true</active>
        <description>Handwrytten Account is required to complete order.</description>
        <errorConditionFormula>ISNULL( Handwrytten__Handwrytten_Account__c )</errorConditionFormula>
        <errorMessage>Handwrytten Account is required to complete order. Please select a Handwrytten Account to complete order.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Handwrytten__VR_Handwrytting_Style</fullName>
        <active>true</active>
        <description>Handwrytting Style is required to complete order.</description>
        <errorConditionFormula>ISBLANK( Handwrytten__font__c )</errorConditionFormula>
        <errorMessage>Handwrytting Style is required to complete order. Please select a handwrytting style.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Handwrytten__VR_Message_Required</fullName>
        <active>true</active>
        <description>Message is required to complete order.</description>
        <errorConditionFormula>ISBLANK(Handwrytten__Message__c)</errorConditionFormula>
        <errorMessage>Message is required to complete order. Please complete message.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Handwrytten__VR_Recipient_Address_Required</fullName>
        <active>false</active>
        <description>Recipient Address s required to complete order</description>
        <errorConditionFormula>AND (
 ISPICKVAL( Handwrytten__Status__c , &apos;Completed&apos;),
 ISBLANK( Handwrytten__address_id__c ) 
)</errorConditionFormula>
        <errorMessage>Recipient Address is required to complete order. Please complete Recipient Address.</errorMessage>
    </validationRules>
</CustomObject>